--- a/Components/Chatbot/Chatbot.razor
+++ b/Components/Chatbot/Chatbot.razor
@@ -34,7 +34,7 @@
 
         @if (thinking)
         {
-            <p class="thinking">"[phi3:latest]" is Thinking...</p>
+            <p class="thinking">"[Claude3]" is Thinking...</p>
         }
 
     </div>
